--- a/main.css
+++ b/main.css
@@ -1,7 +1,22 @@
+:root {
+	--orange:#F80;
+    --white:#FFFFFF;
+    --darkorange:rgb(200, 110, 6);
+    --black:rgb(0,0,0);
+    --pink:(var(pink));
+    --green:(blue);
+
+
+
+
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Leckerli One", cursive;
+    font-weight: 1;
+    ;
 }
 
 body{
@@ -9,11 +24,145 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: #F80;
-    color: aliceblue;
+    background-color: var(--orange);
+    color: var(--white);
 }
 
 header {
-    padding: 2rem 1rem;
-}
+    padding: 1rem 1rem;   
+    margin: 0 auto;
+    text-align: center;
+}    
  
+header h1{ 
+	font-size: 5rem;
+    margin-bottom: 1rem;
+}
+
+#new-task-form {
+	display: flex;;
+}
+
+input, button {
+
+	border: none;
+
+	
+}
+#new-task-input::placeholder {
+	color: var(--black);
+    
+}
+    
+#new-task-input {
+	flex: 1 1 0%;
+	background-color: var(--white);
+	padding: 1rem;
+	border-radius: 1rem;
+	margin-right: 1rem;
+	font-size: 1.25rem;
+}
+
+
+#new-task-submit {
+	color: var(--black);
+	font-size: 1.25rem;
+	cursor: pointer;
+    border-radius: 1rem;
+    animation: wiggle 3s linear infinite;
+    
+}
+
+@keyframes wiggle {
+    0%, 7% {
+      transform: rotateZ(0);
+    }
+    14% {
+      transform: rotateZ(-12deg);
+    }
+    18% {
+      transform: rotateZ(9deg);
+    }
+    22% {
+      transform: rotateZ(-8deg);
+    }
+    26% {
+      transform: rotateZ(5deg);
+    }
+    30% {
+      transform: rotateZ(-3deg);
+    }
+    36%, 100% {
+      transform: rotateZ(0);
+    }
+}
+
+
+
+
+
+
+
+
+    .task .actions .delete {
+        color: crimson;
+    }
+
+    .task-list {
+        padding: .5rem;
+    }
+    
+    .task-list h2 {
+        font-size: 1.5rem;
+        font-weight: 300;
+        color: var(--white);
+        margin-bottom: .5rem;
+        text-align: center;
+    }
+    
+    #tasks .task {
+        display: flex;
+        justify-content: space-between;
+        background-color: var(--orange);
+        padding: 0rem;
+        border-radius: 1rem;
+        margin-bottom: 1rem;
+    }
+    
+    .task .content {
+        flex: 1 1 0%;
+    }
+    
+    .task .content .text {
+        color: var(--black);
+        font-size: 1.125rem;
+        width: 100%;
+        display: block;
+    }
+    
+    .task .content .text:not(:read-only) {
+        color: var(--black);
+    }
+    
+    .task .actions {
+        display: flex;
+        margin: 0 -0.5rem;
+    }
+    
+    .task .actions button {
+        cursor: pointer;
+        margin: 0 0.5rem;
+        font-size: 1.125rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        transition: 0.4s;
+    }
+    
+
+
+
+
+
+
+
+
