--- a/main.css
+++ b/main.css
@@ -3,16 +3,36 @@
     --white:#FFFFFF;
     --red:rgb(220, 20, 60);
     --black:rgb(0,0,0);
-
+    --blue:rgb(63, 78, 243);
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: "Leckerli One", cursive;
+    font-family: "Leckerli One",Arial, Helvetica, sans-serif;
     font-weight: 1;
-    ;
 }
+
+header {
+    padding: 2vw 10vw;   
+    margin: 0 auto;
+    text-align: center;
+}    
+
+h1{ 
+	font-size: 5rem;
+}
+
+input, button {
+	border: none;
+	
+}
+
+#new-task-input::placeholder {
+	color: var(--black);
+    
+}
+
 
 body{
 
@@ -21,48 +41,32 @@ body{
     min-height: 100vh;
     background-color: var(--orange);
     color: var(--white);
-}
-
-header {
-    padding: 2vw 10vw;   
-    margin: 0 auto;
-    text-align: center;
-}    
- 
-header h1{ 
-	font-size: 5rem;
+    align-content: center;
 }
 
 
 
-input, button {
-	border: none;
-	
+.task .content .text:not(:read-only) {
+    color: var(--blue);
 }
-#new-task-input::placeholder {
-	color: var(--black);
+
+button {
+    cursor: pointer;
+    margin: 0 0.5rem;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-transform: uppercase;
+
     
-}
-    
-#new-task-input {
-	flex: 1 1 0%;
-	background-color: var(--white);
-	padding: 0;
-	border-radius: 1rem;
-	margin: 1rem;
-	font-size: 1.25rem;
-    line-height: 12vh;
-    text-indent: 10px;
 }
 
 
 #new-task-submit {
-	color: var(--black);
 	font-size: 1.25rem;
 	cursor: pointer;
     border-radius: 1rem;
     animation: wiggle 3s linear infinite;
-    line-height: 12vh;
+    line-height: 10vh;
 }
 
 @keyframes wiggle {
@@ -90,80 +94,71 @@ input, button {
 }
 
 
+.delete {
+    color: var(--red);
+    border-radius: 1rem;
+    line-height: 9vh;
+}
+
+
+
+.edit{
+    border-radius:0 1rem 1rem 0;
+    line-height: 9vh;
+
+}
+
+
+h2 {
+    font-size: 1.5rem;
+    margin-bottom: .5rem;
+    text-align: center;
+}
 
 
 
 
+#new-task-input {
+	flex: 1 1 0%;        /*check this*/
+	padding: 0;
+	border-radius: 1rem;
+	margin: 1rem;
+	font-size: 1.25rem;
+    line-height: 10vh;
+    text-indent: 10px;
+}
 
 
-    .task .actions .delete {
-        color: var(--red);
-        border-radius: 1rem;
-    }
-
-    button.edit{
-        border-radius:0 1rem 1rem 0;
-
-    }
-
-    .task-list {
-        padding: 0;
-    }
-    
-    .task-list h2 {
-        font-size: 1.5rem;
-        font-weight: 100;
-        color: var(--white);
-        margin-bottom: .5rem;
-        text-align: center;
-    }
-    
-    #tasks .task {
-        display: flex;
-        justify-content: space-between;
-        background-color: var(--orange);
-        padding: 0 10vw;
-        border-radius: 1rem;
-        margin-bottom: 1rem;
-        flex-wrap: wrap;
-    }
-    
-    .task .content {
-        flex: 1 1 0%;
-    }
-    
-    .task .content .text {
-        color: var(--black);
-        font-size: 1.125rem;
-        width: 100%;
-        border-radius: 1rem 0 0 1rem;
-        text-indent: 10px;
-        line-height: 9vh;
-        overflow: clip;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
-    }
-    
-    .task .content .text:not(:read-only) {
-        color: var(--black);
-    }
-    
-    .task .actions {
-        display: flex;
-        margin: 0 -0.5rem;
-    }
-    
-    .task .actions button {
-        cursor: pointer;
-        margin: 0 0.5rem;
-        font-size: 1.125rem;
-        font-weight: 700;
-        text-transform: uppercase;
-        transition: 0.4s;
-        
-    }
-    
+#tasks .task {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10vw;
+    border-radius: 1rem;  /*check this*/
+    margin-bottom: 1rem;
+    flex-wrap: wrap;
+}
 
 
+
+.task .content {
+    flex-grow: 1;
+}
+
+
+.task .actions {
+
+    margin: 0 -0.5rem;
+}
+
+
+.task .content .text {
+    font-size: 1.125rem;
+    width: 100%;
+    border-radius: 1rem 0 0 1rem;
+    text-indent: 10px;
+    line-height: 9vh;
+    font-family: Arial, Helvetica, sans-serif
+}
 
 
 
@@ -200,3 +195,49 @@ input, button {
     transform: scale(.9);
 }
 
+
+
+@media only screen and (max-width: 600px) {
+
+
+
+    .task .content .text {    
+        border-radius: 1rem;
+        margin-bottom: 5px;
+        font-size: 1.5rem;
+    }
+
+
+    .actions    {
+        justify-content: center;
+        width: 100%;
+        display: flex;
+    }
+    
+    .edit{
+        border-radius: 1rem;
+        
+    }
+    .task .content .text {
+        line-height: 6vh;
+    }
+  }
+ 
+
+
+
+  @media only screen and (min-width: 1441px) {
+    #home-button{
+        font-size: 40px ;
+        padding: 10px;
+    }
+    html{
+        font-size: 35px;
+    }
+
+  }
+
+
+
+
+  
